--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .vscode
 *.gpx
 *.svg
+src/main.ts
 
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
